--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-
  </head>
 
  <body>
   <div id="main">
-
-    
-
     <header>
 
        <div id="mySidenav" class="sidenav">
@@ -35,14 +30,14 @@
       </h1>
 
       <ul class="links">
-        <li><a href="#">Resume</a></li>
+        <li><a href="#">Resumé</a></li>
         <li><a href="#">Github</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     <br><br>
     <hr>
-    </header>
 
+    </header>
 
     <section id="about">
 
@@ -56,7 +51,6 @@
       --Ashish Uppala
       </p>
 
-
     </section>
 
     <footer>
@@ -64,6 +58,7 @@
       <a href="#"><i class="fa fa-envelope-o"></i><a/>
       <a href="#"><i class="fa fa-linkedin"></i><a/>
     </footer>
+
   </div>
 
 <script src="js/main.js"></script>
