--- a/index.html
+++ b/index.html
@@ -13,54 +13,97 @@
  <body>
   <div id="main">
     <header>
+        <h1>
+          <a href="index.html" id='name'>Hi, I'm Ashish.</a>
+        </h1>
 
-       <div id="mySidenav" class="sidenav">
-         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-         <a href="#">Projects <i class="fa fa-lightbulb-o"></i></a>
-         <a href="#">Watches <i class="fa fa-clock-o"></i></a>
-         <a href="#">Photography <i class="fa fa-camera-retro"></i></a>
-         <a href="#">Journal <i class="fa fa-book"></i></a>
-         <a href="#">Book Reviews <i class="fa fa-pencil-square-o"></i></a>
-       </div>
+        <div id="navigation" class="topnav">
+          <ul class="links">
 
-      <span id="navbar-btn" style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            <li>
+              <a href="#">
+                <i class="fa fa-pencil-square-o fa-lg"></i>
+                <span class="label" id="blog">Blog</span>
+              </a>
+            </li>
 
-      <h1>
-        Ashish Uppala <span>(shishy)</span> 
-      </h1>
+            <li>
+              <a href="#">
+                <i class="fa fa-lightbulb-o fa-lg"></i>
+                <span class="label" id="projects">Projects</span>
+              </a>
+            </li>
 
-      <ul class="links">
-        <li><a href="#">Resumé</a></li>
-        <li><a href="#">Github</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    <br><br>
-    <hr>
+            <li>
+              <a href="#">
+                <i class="fa fa-camera-retro fa-lg"></i>
+                <span class="label" id="photography">Photography</span>
+              </a>
+            </li>
 
+
+            <li>
+              <a href="#">
+                <i class="fa fa-clock-o fa-lg"></i>
+                <span class="label" id="watches">Watches</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="resume.html">
+                <i class="fa fa-book fa-lg"></i>
+                <span class="label" id="resume"> Resumé</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://github.kdc.capitalone.com/TUJ703">
+                <i class="fa fa-github fa-lg"></i>
+                <span class="label" id="github"> Github</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="mailto:ashish.uppala.93@gmail.com">
+                <i class="fa fa-envelope-o fa-lg"></i>
+                <span class="label" id="email"> Contact</span>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      <br><br>
+      <hr>
     </header>
 
     <section id="about">
+        <div class="mainText">
+          <p>But everyone calls me <u>shishy</u> (shĭ-she).</p>
 
-      <p>Welcome!,</p>
-      <p>My name is Ashish, but everyone calls me <u>shishy</u> (shĭ-she). A few years ago, I almost went to medical school but have since shifted my career to focusing on technology.</p>
-      <p>I currently work as a software engineer at Capital One. In my spare time, I love photography, reading, thinking about issues I encounter daily, and collecting vintage watches.</p>
-      <p> Here, you can learn more about my professional history as well as my interests/hobbies. I also have a tiny <a href="#"><u>blog</u></a> where you can peruse my weekly ramblings.</p>
-      <p> If you have any questions/inquiries, or just want to speak about anything you see here, feel free to <a href="#"><u>contact me</u>. I'm always happy to chat.</a></p>
-      <p>Enjoy,
-      <br>
-      --Ashish Uppala
-      </p>
-
+          <p>A few years ago, I almost went to medical school but have since shifted my career to focusing on technology.</p>
+          <p>I currently work as a software engineer at Capital One. In my spare time, I love photography, reading, thinking about issues I encounter daily, and collecting vintage watches.</p>
+          <p> Here, you can learn more about my professional history as well as my interests/hobbies. I also have a tiny <a href="#"><u>blog</u></a> where you can peruse my weekly ramblings.</p>
+          <p> If you have any questions/inquiries, or just want to speak about anything you see here, feel free to <a href="#"><u>contact me</u>. I'm always happy to chat.</a></p>
+          <p>Enjoy,
+          <br>
+          --Ashish Uppala
+          </p>
+      </div>
     </section>
 
+  <hr class="bottom"/>
     <footer>
       <a href="#"><i class="fa fa-github-alt"></i></a>
-      <a href="#"><i class="fa fa-envelope-o"></i><a/>
+      <a href="#"><i class="fa fa-envelope"></i><a/>
       <a href="#"><i class="fa fa-linkedin"></i><a/>
     </footer>
 
   </div>
 
-<script src="js/main.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
  </body>
 </html>
