reorganized css and adjusted main page styling

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
     <section id="about">
         <div class="mainText">
-          <p>But everyone calls me <u>shishy</u> (shĭ-she).</p>
+          <p>You can also call me <u>shishy</u> (shĭ-she).</p>
 
           <p>A few years ago, I almost went to medical school but have since shifted my career to focusing on technology.</p>
           <p>I currently work as a software engineer at Capital One. In my spare time, I love photography, reading, thinking about issues I encounter daily, and collecting vintage watches.</p>
-          <p> Here, you can learn more about my professional history as well as my interests/hobbies. I also have a tiny <a href="#"><u>blog</u></a> where you can peruse my weekly ramblings.</p>
-          <p> If you have any questions/inquiries, or just want to speak about anything you see here, feel free to <a href="#"><u>contact me</u>. I'm always happy to chat.</a></p>
+          <p> Here, you can learn more about my professional history as well as my interests/hobbies. I also have a tiny <a href="#"><u>blog</u></a> where I write about anything that fascinates me.</p>
+          <p> If you have any questions, or want to speak about anything you see here, feel free to <a href="#"><u>contact me</u>. I'm always happy to chat.</a></p>
           <p>Enjoy,
           <br>
           --Ashish Uppala
