changes to home page done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
 
             <li>
-              <a href="https://github.kdc.capitalone.com/TUJ703">
+              <a target="_blank" href="https://github.com/u-ashish">
                 <i class="fa fa-github fa-lg"></i>
                 <span class="label" id="github"> Github</span>
               </a>
@@ -93,9 +93,9 @@
 
   <hr class="bottom"/>
     <footer>
-      <a href="#"><i class="fa fa-github-alt"></i></a>
-      <a href="#"><i class="fa fa-envelope"></i><a/>
-      <a href="#"><i class="fa fa-linkedin"></i><a/>
+      <a target="_blank" href="https://github.com/u-ashish"><i class="fa fa-github-alt"></i></a>
+      <a href="mailto:ashish.uppala.93@gmail.com"><i class="fa fa-envelope"></i><a/>
+      <a href="https://www.linkedin.com/in/ashishuppala/"><i class="fa fa-linkedin"></i><a/>
     </footer>
 
   </div>
