added materialize tooltips to menu bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ashish Uppala</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
  </head>
@@ -22,60 +23,51 @@
 
             <li>
               <a href="#">
-                <i class="fa fa-pencil-square-o fa-lg"></i>
-                <span class="label" id="blog">Blog</span>
+                <i class="fa fa-pencil-square-o fa-lg tooltipped" data-position="bottom" data-tooltip="Blog"></i>
               </a>
             </li>
 
             <li>
               <a href="#">
-                <i class="fa fa-lightbulb-o fa-lg"></i>
-                <span class="label" id="projects">Projects</span>
+                <i class="fa fa-lightbulb-o fa-lg tooltipped" data-position="bottom" data-tooltip="Projects"></i>
               </a>
             </li>
 
             <li>
               <a href="#">
-                <i class="fa fa-camera-retro fa-lg"></i>
-                <span class="label" id="photography">Photography</span>
+                <i class="fa fa-camera-retro fa-lg tooltipped" data-position="bottom" data-tooltip="Photoghraphy"></i>
               </a>
             </li>
 
-
             <li>
               <a href="#">
-                <i class="fa fa-clock-o fa-lg"></i>
-                <span class="label" id="watches">Watches</span>
+                <i class="fa fa-clock-o fa-lg tooltipped" data-position="bottom" data-tooltip="Watches"></i>
               </a>
             </li>
 
             <li>
               <a href="resume.html">
-                <i class="fa fa-book fa-lg"></i>
-                <span class="label" id="resume"> Resumé</span>
+                <i class="fa fa-book fa-lg tooltipped" data-position="bottom" data-tooltip="Resumé"></i>
               </a>
             </li>
 
             <li>
               <a target="_blank" href="https://github.com/u-ashish">
-                <i class="fa fa-github fa-lg"></i>
-                <span class="label" id="github"> Github</span>
+                <i class="fa fa-github fa-lg tooltipped" data-position="bottom" data-tooltip="Github"></i>
               </a>
             </li>
 
             <li>
               <a href="mailto:ashish.uppala.93@gmail.com">
-                <i class="fa fa-envelope-o fa-lg"></i>
-                <span class="label" id="email"> Contact</span>
+                <i class="fa fa-envelope-o fa-lg tooltipped" data-position="bottom" data-tooltip="Contact"></i>
               </a>
             </li>
 
           </ul>
         </div>
-      <br><br>
-      <hr>
     </header>
-
+    <br><br>
+    <hr>
     <section id="about">
         <div class="mainText">
           <p>You can also call me <u>shishy</u> (shĭ-she).</p>
@@ -99,11 +91,11 @@
     </footer>
 
   </div>
-
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+<script
+  src="http://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="js/main.js"></script>
  </body>
 </html>
